# jetbrains-anti-bugs-llm

./: .dockerignore  .gitignore  Dockerfile  README.md  REAMDE.md  benchmark_results.json  docker-compose.yml  pyproject.toml  run_benchmark.sh
results/: benchmark_results.json
src/: agent.py  models.py  pipeline.py  run_benchmark.py
